k8s-manifests/overlays/staging/superapp/cps/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cps-auth
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: cps-auth
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/cps-auth-qa:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cps-action
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: cps-action
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/cps-action-qa:latest
        imagePullPolicy: Always
