k8s-manifests/overlays/staging/superapp/cps/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cps-auth-route
spec:
  path: /api/v1/cbesuperapp/cps_auth
  to:
    name: cps-auth-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080


---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cps-action-route
spec:
  path: /api/v1/cbesuperapp/cps_action
  to:
    name: cps-action-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
